yi提交给王进行更新： 1. 计算指标方面 2. 运行

--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-  "sap_dirpath": "D:\\sap200023\\SAP2000.exe"
+  "sap_dirpath": "D:\\sap200023\\SAP2000.exe",
+  "sap_dirpath_xy": "C:\\Program Files\\Computers and Structures\\SAP2000\\SAP2000.exe"
 }
